// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sitemap > renders a sitemap component 1`] = `
<div
  id="page-sitemap"
>
  <div
    className="ui container view-wrapper"
  >
    <h1>
      Sitemap
       
    </h1>
    <ul>
      <li
        className="with-children"
      >
        <a
          href="/http://localhost:8080/Plone/page-1"
          onClick={[Function]}
        >
          Page 1-3
        </a>
        <ul>
          <li
            className=""
          >
            <a
              href="/http://localhost:8080/Plone/page-1/page-1-2"
              onClick={[Function]}
            >
              Page 1-2
            </a>
          </li>
          <li
            className=""
          >
            <a
              href="/http://localhost:8080/Plone/page-1/page-1-3"
              onClick={[Function]}
            >
              Page 1-3
            </a>
          </li>
        </ul>
      </li>
      <li
        className=""
      >
        <a
          href="/http://localhost:8080/Plone/page-2"
          onClick={[Function]}
        >
          Page 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Sitemap in a multilingual site > renders a sitemap component 1`] = `
<div
  id="page-sitemap"
>
  <div
    className="ui container view-wrapper"
  >
    <h1>
      Sitemap
       
    </h1>
    <ul>
      <li
        className="with-children"
      >
        <a
          href="/http://localhost:8080/Plone/en/page-1"
          onClick={[Function]}
        >
          Page 1-3
        </a>
        <ul>
          <li
            className=""
          >
            <a
              href="/http://localhost:8080/Plone/en/page-1/page-1-2"
              onClick={[Function]}
            >
              Page 1-2
            </a>
          </li>
          <li
            className=""
          >
            <a
              href="/http://localhost:8080/Plone/en/page-1/page-1-3"
              onClick={[Function]}
            >
              Page 1-3
            </a>
          </li>
        </ul>
      </li>
      <li
        className=""
      >
        <a
          href="/http://localhost:8080/Plone/en/page-2"
          onClick={[Function]}
        >
          Page 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;
